--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+    <script src="./assets/js/db.js"></script>
     <script src="./assets/js/index.js"></script>
     <script type="text/javascript">
       (function () {
